resolution app-taskMg n'est pas reconu => decalrer taskModule dans module app.module

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
 
 
-<!-- <router-outlet></router-outlet> -->
-<div><p>tesrfrfrt</p></div>frfrfrfrf
+<router-outlet><app-tasks-manager></app-tasks-manager></router-outlet>
+<div><p>tesrfrfrt</p></div>frfrfrlkl
