nettoyage et resolution de l'erreur sur le mot clé Obsevable.of(result as T) qui devient of(result as T)

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 
 
-<router-outlet><app-tasks-manager></app-tasks-manager></router-outlet>
-<div><p>tesrfrfrt</p></div>frfrfrlkl
+<router-outlet>
+  <app-tasks-manager></app-tasks-manager>
+</router-outlet>
