--- a/src/app/task/task-list/task-list.component.html
+++ b/src/app/task/task-list/task-list.component.html
@@ -5,19 +5,28 @@
     <li>
       @if (editingTaskId === task._id) {
         <input [(ngModel)]="task.title" type="text" (keyup.enter)="updateTask(task)" />
-        <button (click)="updateTask(task)">Valider</button>
-        <button (click)="cancelUpdateTask()">Annuler</button>
+        <button mat-raised-button (click)="updateTask(task)">Valider</button>
+        <button mat-raised-button (click)="cancelUpdateTask()">Annuler</button>
       }
       @else {
-        <input [(ngModel)]="task.completed" type="checkbox" (change)="updateTask(task)" />
+        <mat-checkbox [(ngModel)]="task.completed" (change)="updateTask(task)"></mat-checkbox>
       @if (task.completed) {
         <s>{{ task.title }}</s>}
       @else {
         {{ task.title }}
       }
-      <button (click)="editTask(task)">Modifier</button>
+      <button mat-raised-button (click)="editTask(task)">Modifier</button>
       }
-      <button (click)="removeTask(task)">Supprimer</button>
+       <button mat-fab (click)="removeTask(task)">
+          <mat-icon>delete</mat-icon>
+        </button>
+    
+
+      <div class="example-button-container">
+       
+      </div>
+     
+
     </li>
   
     }
