--- a/src/app/task/task-list/task-list.component.html
+++ b/src/app/task/task-list/task-list.component.html
@@ -1,36 +1,32 @@
-<p>task-list works!</p>
-<button (click)="showAddTaskModal = true">Ajouter une Tâche</button>
-@if(showAddTaskModal){
-  <app-add-task (close)="showAddTaskModal=false"></app-add-task>
-}
-<ul>
-    @for (task of tasks; track task._id) {
-    <li>
-      @if (editingTaskId === task._id) {
-        <input [(ngModel)]="task.title" type="text" (keyup.enter)="updateTask(task)" />
-        <button mat-raised-button (click)="updateTask(task)">Valider</button>
-        <button mat-raised-button (click)="cancelUpdateTask()">Annuler</button>
-      }
-      @else {
-        <mat-checkbox [(ngModel)]="task.completed" (change)="updateTask(task)"></mat-checkbox>
-      @if (task.completed) {
-        <s>{{ task.title }}</s>}
-      @else {
-        {{ task.title }}
-      }
-      <button mat-raised-button (click)="editTask(task)">Modifier</button>
-      }
-       <button mat-fab (click)="removeTask(task)">
-          <mat-icon>delete</mat-icon>
-        </button>
-    
+<div class="container mx-auto p-4">
+  <div class="bg-white shadow-md rounded-lg p-4 mb-4">
+    <h2 class="text-2xl font-bold mb-4">
+      Liste des Tâches
+    </h2>
+    <ul class="space-y-4">
+      <li class=" items-center justify-between p-4 bg-gray-100 rounded-md">
 
-      <div class="example-button-container">
-       
-      </div>
-     
+      @for (task of tasks; track task._id) {
+        <div class=" items-center">
+          @if (editingTaskId === task._id) {
+            <input [(ngModel)]="task.title" type="text" (keyup.enter)="updateTask(task)" (click)="editTask(task)"  />
+            <button (click)="updateTask(task)" class="bg-blue-300 text-black px-4 py-2 rounded hover:bg-blue-700">
+              Valider
+            </button>
+            <button (click)="cancelUpdateTask()" class="bg-blue-300 text-black px-4 py-2 rounded hover:bg-blue-700">
+              Annuler
+            </button>
+          }
+          @else {
+            <div class="flex items-center space-x-2">
+              <input [(ngModel)]="task.completed" type="checkbox" (change)="updateTask(task)" />
+              <span (click)="editTask(task)" class="text-sm">{{task.title}}</span>
+            </div>
+          }
+        </div>
+      }
+      </li>
+    </ul>
 
-    </li>
-  
-    }
-  </ul>
+  </div>
+</div>
