adding add task

--- a/src/app/task/task-list/task-list.component.html
+++ b/src/app/task/task-list/task-list.component.html
@@ -5,7 +5,7 @@
     </h2>
 
 
-
+<app-add-task></app-add-task>
     
     <ul class=" flex flex-col text-center">
       <li class="flex flex-col items-center justify-center p-4 space-y-2 bg-solid bg-gray-100 rounded-md">
