adding mutliuser connexion. updating login service. reorgnanise ui with user menue and projects. updating task model. create user model

--- a/src/app/dashboard/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard/dashboard.component.html
@@ -1,1 +1,8 @@
-<app-task-list></app-task-list>
+<div class="flex justify-center items-center min-h-screen bg-gray-100">
+    <div class="w-full max-w-sm bg-white shadow-md rounded px-8 pt-6 pb-8 mb-4">
+
+        <app-user-menu class="mt-4 top-left"></app-user-menu>
+        <app-task-list></app-task-list>
+        <!-- <app-project-mgr></app-project-mgr> -->
+    </div>
+</div>
