--- a/src/app/projectTask/project-mgr/project-mgr.component.html
+++ b/src/app/projectTask/project-mgr/project-mgr.component.html
@@ -1,1 +1,9 @@
-<p>project-mgr works!</p>
+
+
+<div class="container mx-auto p-4 max-w-screen-lg">
+    projetc 1
+    projetc 1
+    projetc 1
+    projetc 1
+    projetc 1
+</div>
