--- a/src/app/task/add-task/add-task.component.html
+++ b/src/app/task/add-task/add-task.component.html
@@ -1,4 +1,4 @@
 <div>
-    <input class="form-control mb-3" placeholder="Ajouter Tâche"  [(ngModel)] = "taskTitle" type="text" (keyup.enter)="createTask()" #tacheInput>
+    <input class="form-control rounded-md border-solid border-gray-300 p-2 text-black mb-3 italic" placeholder="Ajouter Tâche"  [(ngModel)] = "taskTitle" type="text" (keyup.enter)="createTask()" #tacheInput>
     <i class="fas fa-plus-circle fa-2x text-primary" style="cursor: pointer;" (click)="createTask()"></i>
 </div>
