feat : implement multi-user login with dynamic profile loading

--- a/src/app/user-menu/user-menu.component.html
+++ b/src/app/user-menu/user-menu.component.html
@@ -1,10 +1,11 @@
-<div class="relative">
+<div class="flex items-center">
     <button class="focus:outline-none" (click)="toggleMenu()">
 
         <img class="h-8 w-8 rounded-full"
-            src="https://images.unsplash.com/photo-1517365830460-955ce3ccd263?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=facearea&facepad=4&w=256&h=256&q=80"
+            src={{currentUser?.profileImageUrl}}
             alt="">
     </button>
+    <div class="ml-2">{{currentUser?.username}}</div>
 
     <!-- Dropdown menu -->
     @if (isMenuOptionDisplayed) {
