--- a/src/app/user-menu/user-menu.component.html
+++ b/src/app/user-menu/user-menu.component.html
@@ -1,4 +1,4 @@
-<div class="flex items-center">
+<div class="flex relative items-center "> 
     <button class="focus:outline-none" (click)="toggleMenu()">
 
         <img class="h-8 w-8 rounded-full"
@@ -9,11 +9,14 @@
 
     <!-- Dropdown menu -->
     @if (isMenuOptionDisplayed) {
-    <div class="absolute left-0 mt-2 w-48 bg-white rounded-lg shadow-xl z-50">
-        <a href="#" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100">Profile</a>
+    <div class="absolute left-4 mt-2 w-48 bg-white rounded-lg shadow-xl z-50 top-12">
+        <a href="#" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100" (click)="navigateToProfile()">Profile</a>
         <a href="#" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100">Settings</a>
-        <a href="#" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100">Logout</a>
+        <a href="#" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100" (click)="logout()">Logout</a>
     </div>
-    }
+}
+     
 
 </div>
+
+
