add signup form

--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -1,6 +1,8 @@
 <!-- login.component.html -->
 <div class="flex justify-center items-center min-h-screen bg-gray-100">
-    <div class="w-full max-w-sm bg-white shadow-md rounded px-8 pt-6 pb-8 mb-4">
+  
+  <div class="w-full max-w-sm bg-white shadow-md rounded px-8 pt-6 pb-8 mb-4">
+      <h2 class="text-center text-3xl font-bold">Log in</h2>
       <form (ngSubmit)="onSubmit()">
         <div class="mb-4">
           <label class="block text-gray-700 text-sm font-bold mb-2" for="email">
