--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -20,6 +20,10 @@
           <button class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline" type="submit">
             Connexion
           </button>
+          <div class="p-3">
+           <p><a routerLink="/signup" routerLinkActive="font-bold text-blue-500"> Don't have an account yet? Create one.</a> </p>
+
+         </div> 
         </div>
       </form>
     </div>
