--- a/src/app/auth/signup/signup.component.html
+++ b/src/app/auth/signup/signup.component.html
@@ -1,4 +1,3 @@
-<p>signup works!</p>
 <div class="flex flex-col justify-center items-center min-h-screen bg-gray-100">
     <h2 class="text-center text-3xl font-bold">Sign up</h2>
     <form [formGroup]="signupForm" (ngSubmit)="onSubmit()">
@@ -40,6 +39,10 @@
                 type="submit">
                 Créer un compte
             </button>
+            <div class="p-3 font-bold text-blue-500">
+             <p><a routerLink="/login" routerLinkActive="font-bold text-blue-500"> Already have an account ? Log in.</a> </p>
+
+         </div>
         </div>
     </form>
 </div>
