--- a/src/styles.scss
+++ b/src/styles.scss
@@ -7,3 +7,8 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.active-link {
+    font-weight: bold;
+    color: blue;
+  }
